# trading_platform

./: .gitignore  ARCHITECTURE.md  Backtest.bpmn  CLAUDE.md  Model Formula.md  PROJECT_STRUCTURE.MD  README.md  compose.yaml  pom.xml  reset-database-dev.sql
ct_mpt/: ENHANCED_MPT_README.md  OC requirement.txt  Optimize_requirement.txt  README.md  Sync data requirement.txt  actual_trading_backtest_ui.py  config.yaml  crypto_sync_dashboard.py  expected_return_prediction_ui.py  pyproject.toml  requirements.txt  run_oc_analysis.py  run_oc_arima.py  simple_dynamic_ui.py
ct_mpt/arima_analysis_results/: arima_analysis_neutral.txt
ct_mpt/src/crypto_trading_model/: demo_sync_data.py  log.txt  main.py  main_apply_arima.py  main_find_arima_parameter.py  update_mpt_requirement.txt
ct_mpt/src/crypto_trading_model/actual_trading_backtest/: __init__.py  actual_trading_backtest_requirement.txt  backtest_simulator.py  config.py  example_usage.py  exceptions.py  quick_test_ui.py  rebalancing.py  results_exporter.py  trading_account.py  ui.py  validators.py
ct_mpt/src/crypto_trading_model/arima/: __init__.py  arima_optimizer.py  (+11 more)
ct_mpt/tests/: test_verification_script.py
ct_mpt/trading_microservice/: .dockerignore  .env.example  Dockerfile  Feedback.txt  README.md  TROUBLESHOOTING.md  docker-compose.yml  requirements-minimal.txt  requirements.txt  test_console_log.py
ct_mpt/trading_microservice/app/: __init__.py  main.py
ct_mpt/trading_microservice/scripts/: setup_environment.py  start_service.py
ct_mpt/trading_microservice/tests/: test_portfolio.py  test_trading.py
(+412 files in other folders)
